; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_lflash.c_loadLFSgc.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_lflash.c_loadLFSgc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32, i64, %struct.TYPE_4__** }

@out = common dso_local global %struct.TYPE_4__* null, align 8
@WRITE_BLOCKS = common dso_local global i32 0, align 4
@uint32_t = common dso_local global i32 0, align 4
@in = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @loadLFSgc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @loadLFSgc(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %5 = icmp ne %struct.TYPE_4__* %4, null
  br i1 %5, label %6, label %53

6:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %31, %6
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @WRITE_BLOCKS, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %34

11:                                               ; preds = %7
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 3
  %14 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %14, i64 %16
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = icmp ne %struct.TYPE_4__* %18, null
  br i1 %19, label %20, label %30

20:                                               ; preds = %11
  %21 = load i32*, i32** %2, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 3
  %24 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %23, align 8
  %25 = load i32, i32* %3, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %24, i64 %26
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %27, align 8
  %29 = call i32 @luaM_free(i32* %21, %struct.TYPE_4__* %28)
  br label %30

30:                                               ; preds = %20, %11
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %3, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %3, align 4
  br label %7

34:                                               ; preds = %7
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 2
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %49

39:                                               ; preds = %34
  %40 = load i32*, i32** %2, align 8
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 2
  %43 = load i64, i64* %42, align 8
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 8
  %47 = load i32, i32* @uint32_t, align 4
  %48 = call i32 @luaM_freearray(i32* %40, i64 %43, i32 %46, i32 %47)
  br label %49

49:                                               ; preds = %39, %34
  %50 = load i32*, i32** %2, align 8
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** @out, align 8
  %52 = call i32 @luaM_free(i32* %50, %struct.TYPE_4__* %51)
  br label %53

53:                                               ; preds = %49, %1
  %54 = load %struct.TYPE_4__*, %struct.TYPE_4__** @in, align 8
  %55 = icmp ne %struct.TYPE_4__* %54, null
  br i1 %55, label %56, label %70

56:                                               ; preds = %53
  %57 = load %struct.TYPE_4__*, %struct.TYPE_4__** @in, align 8
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %66

61:                                               ; preds = %56
  %62 = load %struct.TYPE_4__*, %struct.TYPE_4__** @in, align 8
  %63 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %62, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = call i32 @vfs_close(i64 %64)
  br label %66

66:                                               ; preds = %61, %56
  %67 = load i32*, i32** %2, align 8
  %68 = load %struct.TYPE_4__*, %struct.TYPE_4__** @in, align 8
  %69 = call i32 @luaM_free(i32* %67, %struct.TYPE_4__* %68)
  br label %70

70:                                               ; preds = %66, %53
  ret i32 0
}

declare dso_local i32 @luaM_free(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @luaM_freearray(i32*, i64, i32, i32) #1

declare dso_local i32 @vfs_close(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
